<resources>
    <string name="emptyname">Please Enter your name</string>
    <string name="start">Start</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="welcome_in_autizma_n">Welcome to Autizma</string>
    <string name="we_provide_services_to_parents_who_n_has_an_autistic_child_you_will_enjoy_nscreening_games_helpful_tips_and_nmore_start_now">We provide services to parents who has an Autistic child. shuch as Screening, Games, Helpful tips and more… Start Now!</string>
    <string name="what_feeling_does_appear">What feeling does appear?</string>
    <string name="app_name">Autizma</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rememberme">Remember me</string>
    <string name="signIn">SIGN IN</string>
    <string name="signInFB">SIGN IN WITH FACEBOOK</string>
    <string name="signInG">SIGN IN WITH GOOGLE</string>
    <string name="NOACC">Don\'t have an account?</string>
    <string name="haveAcc">Already have an account?</string>
    <string name="Signup">SIGN UP</string>
    <string name="rewritePass">Re-write Password</string>
    <string name="forgotpass">FORGOT PASSWORD</string>
    <string name="email">E-MAIL</string>
    <string name="sendmail">SEND EMAIL</string>
    <string name="forgotpassText">We just need your registered Email to send you password reset instructions</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="video">Video test</string>
    <string name="doctors">Nearby doctors</string>
    <string name="help_video">Helpful videos</string>
    <string name="MCQ">Questions for Parents </string>
    <string name="institutions">Helpful institutions</string>
    <string name="myAlarms">My Alarms</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lang_ar">Arabic</string>
    <string name="lang_en">English</string>
    <string name="noAlarmstext">Click on the button below to add an alarm</string>
    <string name="alarm_hint">Reminder message</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="current_pass">Current password</string>
    <string name="new_pass">New password</string>
    <string name="rewrite_new_pass">Re-write new password</string>
    <string name="reset_pass">Reset password</string>
    <string name="alarm_notif">ALARM</string>
    <string name="repeat">Repeat</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="repeat_no">Repeat no</string>
    <string name="repeat_type">Repeat type</string>
    <string name="every">Every</string>
    <string name="repeat_off">Repeat off</string>
    <string name="editor_activity_title_new_reminder">Add Alarm Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Alarm</string>
    <string name="action_discard_reminder">Discard Alarm</string>
    <string name="empty_message">Alarm message can\'t be blank!</string>
    <string name="editor_insert_reminder_failed">Failed to save alarm</string>
    <string name="editor_insert_reminder_successful">Alarm saved successfully</string>
    <string name="editor_delete_reminder_failed">Deletion Failed!</string>
    <string name="editor_delete_reminder_successful">Alarm deleted!</string>
    <string name="delete_dialog_msg">Delete this alarm?</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes?</string>
    <string name="yes">Yes</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_alarm_title">Add alarm details</string>
    <string name="edit_alarm">To edit alarm,click on it</string>
    <string name="add_title">Add alarm title</string>
    <string name="done">Done</string>
    <string name="datenotset">Date not set</string>
    <string name="repeatnotset">Repeat not set</string>
    <string name="startWatching">Start Watching </string>
    <string name="stopWatching">Stop Watching</string>
    <string name="chooseImage">اchoose Image</string>
    <string name="uploadImage">Upload Image</string>
    <string name="choice1">Definitely Agree</string>
    <string name="choice2">Slightly Agree</string>
    <string name="choice3">Slightly disagree</string>
    <string name="choice4">Definitely disagree</string>
    <string name="next">Next</string>
    <string name="question1">
He/She often notices small sounds when others do not</string>
    <string name="question2">
He/She usually concentrates more on the whole picture rather than the small details</string>
    <string name="question3">
In a social group ,He/She can easily keep track of several different peoples conversations</string>
    <string name="question4">He/She finds it easy to go back and fourth between different activities</string>
    <string name="question5">He/She does not know how to keep a conversation going with his/her peers</string>
    <string name="question6">He/She is good at social chit-chat</string>
    <string name="question7">When He/She reads a story,he finds it difficult to work out the character s intenons or feelings</string>
    <string name="question8">When He/She was in preschool,he/she used to enjoy playing games involving pretending with other children</string>
    <string name="question9">He/She finds it easy to work out what someone is thinking or feeling just by looking at their face</string>
    <string name="question10">He/She finds it hard to make new friends</string>
    <string name="pickLanguage">Choose app language</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="mounth">Month</string>
    <string name="enternum">Enter number</string>
    <string name="change_password">Change password</string>
    <string name="change_user_name">Change username</string>
    <string name="change_profile_pic">Change profile picture</string>
    <string name="blankName">New name connot be blank!</string>
    <string name="enterNewName">Enter new name</string>
    <string name="enterNewPass">Enter new password</string>
    <string name="blankPass">new password cannot be blank!</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="editDone">Editing done!</string>
    <string name="questions_no">/10 questions</string>
    <string name="submit">Submit</string>
    <string name="Please_choose_an_answer">Please choose an answer</string>
    <string name="definitely_agree">DEFINITELY AGREE</string>
    <string name="slightly_agree">SLIGHTLY AGREE</string>
    <string name="slightly_disagree">SLIGHTLY DISAGREE</string>
    <string name="definitely_disagree">DEFINITELY DISAGREE</string>
    <string name="age">Age</string>
    <string name="enterChildAge">Enter age of your child (in years)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="no">No</string>
    <string name="Ethnicity">Ethnicity</string>
    <string name="Was_your_child_born_with_jaundice">Was your child born with jaundice?</string>
    <string name="autisma_family_q">Has anyone in the immediate family been diagnosed with autism?</string>
    <string name="messageWithLink"><a href="https://www.facebook.com/">Facebook page</a></string>
    <string name="deleted">Deleted</string>
    <string name="changes_discarded">Changes discarded!</string>
    <string name="childTests">CHILD TESTS</string>
    <string name="games">GAMES</string>
    <string name="hello">Hello</string>
    <string name="care">HOW CAN WE TAKE CARE OF YOUR CHILD?</string>
    <string name="enterValidEmail">please enter a valid email</string>
    <string name="enterPass">please enter a password</string>
    <string name="enterValidName">please enter a valid name</string>
    <string name="reEnterPass">please rewrite your password</string>
    <string name="checkMailForConfirm">please check your email for the confirmation code</string>
    <string name="enterConfirmCode">Enter confirmation code</string>
    <string name="forgotPassMail">please check your registered mail</string>
    <string name="connectionError">Connection error,check your internet connection</string>
    <string name="authFail">authorization failed, please log in again</string>
    <string name="email_notConfirmed">email not confirmed</string>
    <string name="invalidConfirmation">Invalid confirmation code</string>
    <string name="mailOrPassWrong">Your email or password is incorrect</string>
    <string name="invalidTokan">Invalid or expired token</string>
    <string name="emailUsed">Email is alreay used</string>
    <string name="success">Success!</string>
    <string name="haveCOde">I have confirmation code for new password</string>
    <string name="haveCodeForNewMail">I have code for new E-mail</string>
    <string name="passlength">Password length should be at least 8 characters,digits and letters</string>
    <string name="choose_tst">Choose one of the folloing tests.</string>
    <string name="mChatBtn">M - CHAT Test</string>
    <string name="gilliam">Gilliam Test</string>
    <string name="M_chat_q">What is M-chat chicklist?</string>
    <string name="Mchat_def">The Modified Checklist for Autism in Toddlers, is a screener that will ask a series of 20 questions about your child’s behavior. It\'s intended for toddlers between 16 and 30 months of age. The results will let you know if a further evaluation may be needed. You can use the results of the screener to discuss any concerns that you may have with your child’s healthcare provider.</string>
    <string name="start_mchat">Start the survey</string>
    <string name="Mchat1">1.If you point at something across the room, does your child look at it? (For Example, if you point at a toy or an animal, does your child look at the toy or animal?)</string>
    <string name="Mchat2">2.Have you ever wondered if your child might be deaf?</string>
    <string name="Mchat3">3.Does your child play pretend or make-believe? (For Example, pretend to drink from an empty cup, pretend to talk on a phone, or pretend to feed a doll or stuffed animal?)</string>
    <string name="Mchat4">4.Does your child like climbing on things? (For Example, furniture, playground equipment, or stairs)</string>
    <string name="Mchat5">5.Does your child make unusual finger movements near his or her eyes? (For Example, does your child wiggle his or her fingers close to his or her eyes?)</string>
    <string name="Mchat6">6.Does your child point with one finger to ask for something or to get help? (For Example, pointing to a snack or toy that is out of reach)</string>
    <string name="Mchat7">7.Does your child point with one finger to show you something interesting? (For Example, pointing to an airplane in the sky or a big truck in the road)</string>
    <string name="Mchat8">8.s your child interested in other children? (For Example, does your child watch other children, smile at them, or go to them?)</string>
    <string name="Mchat9">9.Does your child show you things by bringing them to you or holding them up for you to see — not to get help, but just to share? (For Example, showing you a flower, a stuffed animal, or a toy truck)</string>
    <string name="Mchat10">10.Does your child respond when you call his or her name? (For Example, does he or she look up, talk or babble, or stop what he or she is doing when you call his or her name?)</string>
    <string name="Mchat11">11.When you smile at your child, does he or she smile back at you?</string>
</resources>