<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quiz_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/questionNB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="0"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@id/questionNB"
            android:text="@string/questions_no"
            android:textSize="20sp" />


    </RelativeLayout>


    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:padding="8dp"
        android:text="@string/question1"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/definitely_agree"
        android:background="@drawable/button_shape"
        android:textColor="#fff"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/choice1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slightly_agree"
        android:background="@drawable/button_shape"
        android:textColor="#fff"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/choice2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slightly_disagree"
        android:background="@drawable/button_shape"
        android:textColor="#fff"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/choice3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/definitely_disagree"
        android:background="@drawable/button_shape"
        android:textColor="#fff"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/choice4"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_shape"
        android:padding="8dp"
        android:text="@string/next"
        android:textColor="#fff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

    </RelativeLayout>
</LinearLayout>
