<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/dont_have_acc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="160dp"
        android:text="@string/NOACC"
        android:textColor="#bbbbbb"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_mail" />

    <TextView
        android:id="@+id/to_sign_up3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="224dp"
        android:text="@string/Signup"
        android:textColor="@color/colorDarkBlue"
        android:textSize="17dp"
        app:layout_constraintStart_toEndOf="@+id/dont_have_acc3"
        app:layout_constraintTop_toBottomOf="@+id/send_mail" />

    <Button
        android:id="@+id/send_mail"
        android:layout_width="349dp"
        android:layout_height="50dp"

        android:layout_marginTop="36dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/sendmail"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registered_mail" />

    <EditText
        android:id="@+id/registered_mail"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_style"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="3dp"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_pass" />

    <TextView
        android:id="@+id/forgot_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/forgotpass"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/reset_pass"
        android:layout_width="301dp"
        android:layout_height="55dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/forgotpassText"
        android:textColor="#756F6F"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_text" />

    <ImageView
        android:id="@+id/back_from_forgot_pass"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
</androidx.constraintlayout.widget.ConstraintLayout>