<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirm">

    <TextView
        android:id="@+id/confirm_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/checkMailForConfirm"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirm_edittext"
        android:layout_width="250sp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enterConfirmCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_text_view" />

    <Button
        android:id="@+id/button_confirmMail"
        android:layout_width="250sp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_edittext"
        android:textColor="@color/colorWhite"
        android:text="@string/done"/>
</androidx.constraintlayout.widget.ConstraintLayout>